--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-08-03 02:12:22
+lastsearch = 2024-08-03 04:53:30
 
 [helloviettravel.com]
-match = -150.0%%
-title = Tour xuyên Việt 21 ngày - Hello Việt Nam Travel
-url = https://helloviettravel.com/hlvn_xv12-du-lich-xuyen-viet-21-ngay-20-dem-khoi-hanh-tu-tp-hcm.html
+match = -181.2%%
+title = Tour Xuyên Việt 18 ngày 17 đêm - Hello Vietnam Travel
+url = https://helloviettravel.com/tour-xuyen-viet-18-ngay-17-dem-2.html
 
 [saovangtravel.com]
 match = -50.0%%
@@ -32,9 +32,9 @@ title = Du Lịch USA và Thế Giới
 url = https://www.facebook.com/groups/dulichusavathegioi/
 
 [vinpearl.com]
-match = -156.2%%
-title = Hé lộ “tọa độ” 18 địa điểm du lịch Nghệ An HOT nhất!
-url = https://vinpearl.com/vi/he-lo-toa-do-18-dia-diem-du-lich-nghe-an-hot-nhat
+match = -193.8%%
+title = TOP 40 địa điểm du lịch Việt Nam nổi tiếng và hấp dẫn nhất
+url = https://vinpearl.com/vi/40-dia-diem-du-lich-viet-nam-noi-tieng-nhat-dinh-nen-den-mot-lan
 
 [thegioixecau.vn]
 match = -150.0%%
@@ -87,9 +87,9 @@ title = Du lịch Mỹ khởi động lại sau 18 tháng đóng cửa
 url = https://lienbangtravel.com/vi/tin-tuc/258-du-lich-my-khoi-dong-lai-sau-18-thang-dong-cua
 
 [www.klook.com]
-match = -118.8%%
-title = 35 Địa Điểm Du Lịch Mỹ Hấp Dẫn Cho Kỳ Nghỉ Dài
-url = https://www.klook.com/vi/blog/dia-diem-du-lich-my/
+match = -168.8%%
+title = 42 Địa Điểm Du Lịch Gần Sài Gòn Cho Cuối Tuần Năng ...
+url = https://www.klook.com/vi/blog/diem-du-lich-gan-sai-gon/
 
 [dulichviet.com.vn]
 match = -206.2%%
@@ -99,7 +99,7 @@ url = https://dulichviet.com.vn/tin-tuc/tour-du-lich-mien-tay-top-18-dia-diem-ha
 [www.bestprice.vn]
 match = -212.5%%
 title = Top 12 địa điểm đi chơi ở Sài Gòn cuối tuần vui quên lối về
-url = https://www.bestprice.vn/blog/diem-den-8/ho-chi-minh-3/top-12-dia-diem-di-choi-o-sai-gon-cuoi-tuan-vui-quen-loi-ve_26-3983.html?srsltid=AfmBOooAaVp2h2oy4U2CXOvcM4LITEQ_h9wECRjxTPHX_V8lDwdQT-hi
+url = https://www.bestprice.vn/blog/diem-den-8/ho-chi-minh-3/top-12-dia-diem-di-choi-o-sai-gon-cuoi-tuan-vui-quen-loi-ve_26-3983.html
 
 [vinwonders.com]
 match = -162.5%%
