--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-08-02 23:31:03
+lastsearch = 2024-08-03 04:51:07
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -685,4 +685,9 @@ url = https://baolamdong.vn/xa-hoi/202408/cat-tien-quyet-liet-trien-khai-cac-bie
 match = -200.0%%
 title = Trang Sức Vàng: Vàng Trắng, Vàng Ý, Vàng 18K, 24K Cao ...
 url = https://www.pnj.com.vn/trang-suc-vang/
+
+[www.tiktok.com]
+match = 27.3%%
+title = Game Lắc Gà
+url = https://www.tiktok.com/discover/game-lắc-gà
 
