--- a/images/ga-chun-uc-16/config.ini
+++ b/images/ga-chun-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-uc-16.html
 lastopen = 2024-06-10 01:12:04
 
 [search]
-lastsearch = 2024-08-02 21:26:34
+lastsearch = 2024-08-03 04:46:54
 
 [bedding.vn]
 match = -123.1%%
@@ -117,9 +117,9 @@ title = jack l. skinner, ph.d., pe
 url = https://www.mtech.edu/mechanical-engineering/faculty/jack-skinner/docs/cv-jack-skinner.pdf
 
 [researchdirectory.uc.edu]
-match = -323.1%%
-title = Changjoo Kim - UC Research Directory - University of Cincinnati
-url = https://researchdirectory.uc.edu/p/changjkm
+match = -261.5%%
+title = Expert Profile: Je Hyeong Bahk - UC Research Directory
+url = https://researchdirectory.uc.edu/p/bahkjg
 
 [thegioinem.com]
 match = -230.8%%
@@ -400,4 +400,9 @@ url = https://idv.sinica.edu.tw/cjlai/
 match = -14.3%%
 title = Chun Lu
 url = https://scholar.google.com/citations?user=ufM1QgQAAAAJ&hl=en
+
+[www.courtlistener.com]
+match = -253.8%%
+title = Chun v. Georgia Christian University, Inc., 1:15-cv-01154
+url = https://www.courtlistener.com/docket/4505189/chun-v-georgia-christian-university-inc/
 
