--- a/images/ga-ni-long-2m-x-2m2/config.ini
+++ b/images/ga-ni-long-2m-x-2m2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-2m-x-2m2.html
 lastopen = 2024-06-09 23:13:19
 
 [search]
-lastsearch = 2024-08-03 02:25:08
+lastsearch = 2024-08-03 04:56:41
 
 [www.diepxuan.com]
 match = 36.8%%
@@ -12,9 +12,9 @@ title = Ga ni lông 2m x 2m2 - Điệp Xuân
 url = https://www.diepxuan.com/ga-ni-long-2m-x-2m2.html
 
 [shopee.vn]
-match = -84.2%%
-title = Ga chống thấm bọc nệm kích thước 2m*2m2 - Shopee
-url = https://shopee.vn/Ga-chống-thấm-bọc-nệm-kích-thước-2m*2m2-i.2157828.1211390382
+match = 21.1%%
+title = GA CHỐNG THẤM CAO CẤP 2m x 2m2
+url = https://shopee.vn/GA-CHỐNG-THẤM-CAO-CẤP-2m-x-2m2-i.236450460.21023762253
 
 [www.lazada.vn]
 match = -136.8%%
@@ -32,8 +32,8 @@ title = Ga chống thấm cao cấp Everon
 url = https://www.everonvn.vn/chi-tiet/ga-chong-tham-cao-cap-everon.html
 
 [phuonghoangphat.com]
-match = -84.2%%
-title = GA GIƯỜNG CHÍNH HÃNG LE.HOME Sz 1.5m x 2m= 120k ...
+match = -63.2%%
+title = GA GIƯỜNG CHÍNH HÃNG LE.HOME Sz 1.5m x 2m= ...
 url = https://phuonghoangphat.com/ga-giuong-chinh-hang-le-home sz-1-5m-x-2m-120k-sz-1-8m-x-2m-135k-sz-2m2-x-2m-140k
 
 [suongtuyet.com]
@@ -132,9 +132,9 @@ title = Ga chống thấm giường 1.6m-2.2m - GUMU
 url = https://gumu.vn/ga-chong-tham-giuong-16m22m
 
 [h5.lazada.vn]
-match = -136.8%%
-title = Bộ chăn ga nỉ lông tim cao cấp, bộ ga giường nỉ nhung 4 ...
-url = https://h5.lazada.vn/products/bo-chan-ga-ni-long-tim-cao-cap-bo-ga-giuong-ni-nhung-4-mon-phu-chun-1m-1m2-1m4-1m5-1m6-1m8-2mx2m-2m2-i2323748729-s11297993017.html
+match = -105.3%%
+title = Ga giường chống thấm nước, drap bảo vệ nệm 2m, 2m2 ...
+url = https://h5.lazada.vn/products/ga-giuong-chong-tham-nuoc-drap-bao-ve-nem-2m-2m2-chinh-hang-pt-chat-lieu-thun-lua-sieu-mem-min-khong-ham-bi-khong-sot-soat-kich-thuoc-du-mau-baby-store-09-i2000716005.html
 
 [pages.lazada.vn]
 match = -115.8%%
