--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-08-03 02:52:26
+lastsearch = 2024-08-03 04:44:03
 
 [www.lazada.vn]
-match = -44.4%%
-title = Nem Cao Su Non Day Giá Tốt T06/2024
-url = https://www.lazada.vn/tag/nem-cao-su-non-day/
+match = -94.4%%
+title = Nệm Siêu Nhẹ Giá Tốt T07/2024 | Mua tại Lazada.vn
+url = https://www.lazada.vn/tag/nem-sieu-nhe/
 
 [m.facebook.com]
 match = -100.0%%
