--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-08-03 04:38:38
+lastsearch = 2024-08-03 04:47:36
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -22,9 +22,9 @@ title = notice on public participation & accessibility
 url = https://www.southpasadenaca.gov/files/assets/public/v/1/police/documents/agenda-packet-combined-092.pdf
 
 [en.wikipedia.org]
-match = -58.3%%
-title = Nam Joo-hyuk
-url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
+match = -72.7%%
+title = Kristi Noem
+url = https://en.wikipedia.org/wiki/Kristi_Noem
 
 [www.facebook.com]
 match = -108.7%%
@@ -422,9 +422,9 @@ title = Investor relations - PCH (EN) - ProCredit Holding
 url = https://www.procredit-holding.com/investor-relations/
 
 [en.yna.co.kr]
-match = -82.6%%
-title = 122 ships affected by suspected N. Korean GPS jamming
-url = https://en.yna.co.kr/view/AEN20120504005000315
+match = -117.4%%
+title = (2nd LD) PM: THAAD deployment 'difficult yet inevitable ...
+url = https://en.yna.co.kr/view/AEN20170907001852315
 
 [www.usmcu.edu]
 match = -104.3%%
@@ -654,5 +654,5 @@ url = https://www.cnn.com/
 [books.google.com]
 match = -82.6%%
 title = Japan Weekly Mail - Page 194 - Google Books Result
-url = https://books.google.com/books?id=QyVCAQAAMAAJ&pg=PA194&lpg=PA194&dq=ruot+nem+korea+9f+15+19&source=bl&ots=_sobLNJ8lx&sig=ACfU3U3QkbGBIHV6dfxQRS-GUQyKilIZug&hl=en&sa=X&ved=2ahUKEwiMlfHVlteHAxXEv4kEHZnYE9kQ6AF6BAgrEAM
+url = https://books.google.com/books?id=QyVCAQAAMAAJ&pg=PA194&lpg=PA194&dq=ruot+nem+korea+9f+15+19&source=bl&ots=_sobLNN5kv&sig=ACfU3U2f0WG8RoRBCSVMlZHUbwgAj5nHqQ&hl=en&sa=X&ved=2ahUKEwiO0M60pNeHAxXtFVkFHREkAJQQ6AF6BAgdEAM
 
