--- a/images/tham-chan-khach-san/config.ini
+++ b/images/tham-chan-khach-san/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-chan-khach-san.html
 lastopen = 2024-06-07 00:37:03
 
 [search]
-lastsearch = 2024-08-03 04:24:09
+lastsearch = 2024-08-03 04:54:15
 
 [www.khanbongcaocap.com.vn]
 match = -78.9%%
@@ -14,7 +14,7 @@ url = https://www.khanbongcaocap.com.vn/tham-chui-chan-khach-san
 [www.lazada.vn]
 match = -36.8%%
 title = Thảm Chân Khách Sạn Giá Tốt T07/2024 - Lazada
-url = https://www.lazada.vn/tag/tham-chan-khach-san/?srsltid=AfmBOop8K8b19awjDwbxVeEMZdJXvrTlc-h96iDQlcCIkHQ0WuId0A7z
+url = https://www.lazada.vn/tag/tham-chan-khach-san/
 
 [falcon.com.vn]
 match = -105.3%%
