--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-08-03 04:13:02
+lastsearch = 2024-08-03 09:05:10
 
 [www.diepxuan.com]
 match = 3.6%%
 title = Chăn ga gối màu - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/chan-ga-goi-mau.html
+url = https://www.diepxuan.com/chan-ga-goi-mau.html?srsltid=AfmBOopR5mtOrjQk7Pr1lClPhpkU_TOvDB-qC6Nlhj3AOakmjgIjRet7
 
 [shop.chanrathanhthuy.com]
 match = 10.7%%
 title = Bộ Ga Bọc Cotton Thêu Chân Màu Nâu Đất (12)
-url = https://shop.chanrathanhthuy.com/products/bo-ga-boc-theu-chan-mau-nau-dat
+url = https://shop.chanrathanhthuy.com/products/bo-ga-boc-theu-chan-mau-nau-dat?srsltid=AfmBOorTIZL82dYztJAi7A4nzJG-N1XLYAmntP39Gk60ijwV6Vph9k3T
 
 [shopee.vn]
 match = -21.4%%
@@ -22,9 +22,9 @@ title = chăn ga gối - Giá Tốt, Sale Tháng 07, Ship 0 Đồng
 url = https://shopee.vn/list/chăn ga gối
 
 [foreverbedding.net]
-match = -7.1%%
-title = Top 10+ Bộ Chăn Ga Gối Đệm Màu Đỏ Hot Nhất Hiện Nay
-url = https://foreverbedding.net/mau-chan-ga-goi-dem-mau-do
+match = -32.1%%
+title = Top 20+ Bộ Chăn Ga Gối Đệm Cotton Đáng Mua Nhất Hiện Nay
+url = https://foreverbedding.net/mau-chan-ga-goi-dem-cotton?srsltid=AfmBOopB8Y3QVouBXRLOsp2Cru4MS1i5MZBCkYe5mUy9OdUZwtg1RyFo
 
 [changagoidemsonghong.com]
 match = -28.6%%
