--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-08-03 07:01:10
+lastsearch = 2024-08-03 09:04:49
 
 [tiki.vn]
-match = -138.9%%
-title = Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi - Tiki
-url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-xanh-duong-160-x-200-cm-p7855483.html
+match = -122.2%%
+title = Mua Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi
+url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-xanh-la-160-x-200-cm-p7855499.html
 
 [nemxinh.net]
 match = 50.0%%
@@ -42,9 +42,9 @@ title = Bộ ga chun Cotton chống thấm màu xanh đậm
 url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-dam.html
 
 [foreverbedding.net]
-match = -61.1%%
-title = Bộ ga phủ Mystic-T 26 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-phu-mystic-t-26
+match = -150.0%%
+title = FOREVER | Hệ Thống Chăn Ga Gối Đệm Cao Cấp Toàn Quốc
+url = https://foreverbedding.net/
 
 [aeoneshop.com]
 match = -105.6%%
@@ -102,8 +102,8 @@ title = Bộ Drap & Chăn Chần Cotton 160x200 (5 Món)...
 url = https://leflair.com/en/shop/bo-drap-chan-chan-cotton-160x200-5-mon-15916
 
 [ninhouse.vn]
-match = -138.9%%
-title = [DRAP LỤA NỆM] Chăn ga gối đệm NIN Tencel TC800 ...
+match = -161.1%%
+title = [DRAP LỤA NỆM] Chăn ga gối đệm NIN Tencel TC800 mát ...
 url = https://ninhouse.vn/collections/nin-tencel-800
 
 [elmichsleep.vn]
