--- a/images/chan-hoi-mai-rua/config.ini
+++ b/images/chan-hoi-mai-rua/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-mai-rua.html
 lastopen = 2024-06-09 23:40:13
 
 [search]
-lastsearch = 2024-08-03 04:18:38
+lastsearch = 2024-08-03 09:03:43
 
 [shopee.vn]
 match = -162.5%%
@@ -12,8 +12,8 @@ title = Chăn Lông Cừu Đại Hàn , Chăn cừu mai rùa siêu ấm kích ..
 url = https://shopee.vn/Chăn-Lông-Cừu-Đại-Hàn-Chăn-cừu-mai-rùa-siêu-ấm-kích-thước-2mx2m3-nặng~-3-8kg-Hàng-Loại-1-Cao-Cấp-Dày-3-Lớp-Siêu-Ấm-i.134729951.23858267538
 
 [www.instagram.com]
-match = 12.5%%
-title = Hoi Chan (@hoichandraws)
+match = -162.5%%
+title = Hoi Chan (@hoichandraws) • Instagram photos and videos
 url = https://www.instagram.com/hoichandraws/?hl=en
 
 [vi.wikipedia.org]
@@ -255,4 +255,9 @@ url = https://dienmaycholon.com/may-loc-nuoc
 match = 6.2%%
 title = HK-Nhà vệ sinh mai rùa lớn
 url = https://gaumiao.com/hk-nha-ve-sinh-mai-rua-lon
+
+[www.skycargo.com]
+match = -37.5%%
+title = global-airport-codes.pdf
+url = https://www.skycargo.com/media/2099/global-airport-codes.pdf
 
