--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-08-03 01:48:53
+lastsearch = 2024-08-03 09:06:33
 
 [www.bible.com]
-match = -88.2%%
-title = LUKA 22 | MIZCLBSI Bible | YouVersion
-url = https://www.bible.com/bible/1048/LUK.22.MIZCLBSI
+match = -100.0%%
+title = MATHAIA 22 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/MAT.22.MIZCLBSI
 
 [mizobibleblog.wordpress.com]
 match = -123.5%%
@@ -17,9 +17,9 @@ title = Thufingte 1-31 - Mizo BIBle - WordPress.com
 url = https://mizobibleblog.wordpress.com/2017/02/26/thufingte-1-31/
 
 [www.biblegateway.com]
-match = -82.4%%
-title = John 20:22 New International Version
-url = https://www.biblegateway.com/passage/?search=John 20:22&version=NIV
+match = -129.4%%
+title = Matthew 20:22 NIV - “You don't know what you are
+url = https://www.biblegateway.com/passage/?search=Matthew 20:22&version=NIV
 
 [mungchup.com]
 match = -100.0%%
