--- a/images/nem-caosu-thang-loi-160x200x10/config.ini
+++ b/images/nem-caosu-thang-loi-160x200x10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-thang-loi-160x200x10.html
 lastopen = 2024-06-07 01:42:38
 
 [search]
-lastsearch = 2024-08-03 04:57:02
+lastsearch = 2024-08-03 09:07:17
 
 [congtynemthangloi.com]
 match = -46.7%%
@@ -18,8 +18,8 @@ url = https://khonemgiatot.vn/nem-cao-su-goldlatex-thang-loi
 
 [nemcaosuthangloi.vn]
 match = 33.3%%
-title = NỆM CAO SU WONDERFOAM THẮNG LỢI
-url = https://nemcaosuthangloi.vn/nem-cao-su-wonderfoam-thang-loi.html
+title = NỆM CAO SU NON THẮNG LỢI
+url = https://nemcaosuthangloi.vn/nem-cao-su-non-thang-loi.html
 
 [noithatdaithanh.vn]
 match = 36.7%%
@@ -57,9 +57,9 @@ title = Bảng Giá nệm cao su non thắng lợi chính hãng giá rẻ nhát
 url = https://khonemthangloi.vn/product/gia-nem-thang-loi/
 
 [nemthangloi.vn]
-match = 33.3%%
-title = Nệm Cao Su Non Thắng Lợi
-url = http://nemthangloi.vn/san-pham/nem-cao-su-nhan-tao-30.html
+match = 30.0%%
+title = Nệm Cao Su Non Cao Cấp Thắng Lợi
+url = http://nemthangloi.vn/san-pham/nem-cao-su-nhan-tao-gam-nhung-thang-loi-10.html
 
 [nem.vn]
 match = 23.3%%
@@ -120,4 +120,9 @@ url = https://demxanh.com/bang-gia-nem-cao-su-dong-phu-2018.html
 match = 10.0%%
 title = Nệm cao su non gấp 3 Thắng Lợi nhiều kích thước
 url = https://shopee.vn/Nệm-cao-su-non-gấp-3-Thắng-Lợi-nhiều-kích-thước-Nội-Thất-Phan-Gia-i.1118973577.18895840648
+
+[hoangkimhome.com]
+match = -30.0%%
+title = Nệm cao su Thắng Lợi chính hãng giá ưu đãi - Hoàng Kim Home
+url = https://hoangkimhome.com/nem-cao-su-thang-loi/
 
