--- a/images/bo-bon-mua-epm19064-180x200/config.ini
+++ b/images/bo-bon-mua-epm19064-180x200/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/bo-bon-mua-epm19064-180x200.html
 lastopen = 2024-06-06 17:08:27
 
 [search]
-lastsearch = 2024-08-03 09:59:16
+lastsearch = 2024-08-03 10:51:02
 
 [everonvn.com.vn]
 match = 7.4%%
 title = Bộ Artemis Tk Giảm Giá - Everon
-url = https://everonvn.com.vn/everon/1915/bo-artemis-tk-giam-gia
+url = https://everonvn.com.vn/everon/1915/bo-artemis-tk-giam-gia?srsltid=AfmBOoo89GsKGVBMMeBm9H-cPqrgNE-RI3uXIrM1epodRNudwp34e7Hf
 
 [everon.com.vn]
 match = 40.0%%
 title = BỘ EVERON EPM 19064 Modal
-url = https://everon.com.vn/epm-19064/
+url = https://everon.com.vn/epm-19064/?srsltid=AfmBOor-w15cY6CnuHOQTEQeuZZb30OXlseTqGlmRoz3eXnZQIALxKaB
 
 [demxanh.com]
 match = 18.5%%
 title = Bộ chăn ga gối EVeron EPM19068
-url = https://demxanh.com/bo-chan-ga-goi-everon-epm19068.html
+url = https://demxanh.com/bo-chan-ga-goi-everon-epm19068.html?srsltid=AfmBOoqPav0xnM5KT9Pk35ZkLJxIrsAQIPtetfRMhk2LxSiqogqdhfqo
 
 [shopee.vn]
 match = -48.1%%
