--- a/images/bo-ga-goi-chun-chan-happy-16/config.ini
+++ b/images/bo-ga-goi-chun-chan-happy-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-chan-happy-16.html
 lastopen = 2024-06-06 16:51:08
 
 [search]
-lastsearch = 2024-08-03 00:37:25
+lastsearch = 2024-08-03 10:44:56
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Happiness Việt Nam | Hanoi
 url = https://www.facebook.com/changahappinessvn/
 
 [shopee.vn]
-match = -46.4%%
-title = [SP mới] Bộ ga gối poly cotton ga kí túc xá kích thước ...
-url = https://shopee.vn/-SP-mới-Bộ-ga-gối-poly-cotton-ga-kí-túc-xá-kích-thước-80x190cm-drap-nệm-ga-giường-đơn-ga-chun-trải-giường-i.483546614.20369429874
+match = -21.4%%
+title = Bộ ga gối trải giường 2m2x2m bo chun miễn phí, bộ ...
+url = https://shopee.vn/Bộ-ga-gối-trải-giường-2m2x2m-bo-chun-miễn-phí-bộ-ga-giường-cotton-poly-mềm-mịn-thấm-hút-mồ-hôi-Happy-Home-i.600110082.20851466621
 
 [chandem.com.vn]
 match = 17.9%%
@@ -37,9 +37,9 @@ title = Bảng giá chăn ga gối đệm mới nhất
 url = https://thegioinem.com/bang-gia-chan-ga-goi-dem.html
 
 [happynest.vn]
-match = 39.3%%
-title = Bộ ga chun chần Everon EST21034
-url = https://happynest.vn/shop/EBGCTEST21034/Bộ ga chun chần Everon EST21034.html
+match = 50.0%%
+title = Bộ Ga chun chần EPM21071
+url = https://happynest.vn/shop/EPM21071GC/bo-ga-chun-chan-epm21071.html
 
 [chuyenhangviet.com]
 match = -25.0%%
