--- a/images/chan-4-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-4-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:17:35
 
 [search]
-lastsearch = 2024-08-03 08:08:13
+lastsearch = 2024-08-03 10:56:15
 
 [shopee.vn]
 match = -25.9%%
@@ -17,14 +17,14 @@ title = Chăn Lông Tuyết Thái Sịn, Chăn Mền Mùa Đông Khổ ...
 url = https://www.lazada.vn/products/chan-long-tuyet-thai-sin-chan-men-mua-dong-kho-rong-loai-2kg-3kg-4kg-5kg-size-17mx2m-2mx2m3-i2564626690.html
 
 [tiki.vn]
-match = 7.4%%
-title = Chăn lông 4 kg hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chăn lông 4 kg
+match = 11.1%%
+title = Chăn nhung tuyết hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chăn nhung tuyết
 
 [h5.lazada.vn]
 match = -11.1%%
-title = Chăn Lông Tuyết Thái Sịn, Chăn Mền Mùa Đông Khổ ...
-url = https://h5.lazada.vn/products/chan-long-tuyet-thai-sin-chan-men-mua-dong-kho-rong-loai-2kg-3kg-4kg-5kg-size-17mx2m-2mx2m3-i2564626690-s12540487699.html
+title = [CHUYÊN SỈ]🌺 chăn băng lông tuyết nhung, ...
+url = https://h5.lazada.vn/products/chuyen-si-chan-bang-long-tuyet-nhung-chan-tuyet-sin-thai-lan-cho-mua-dong-am-ap-loai-3kg4kg5kg-i2100867387.html
 
 [tienphong.vn]
 match = 3.7%%
@@ -47,9 +47,9 @@ title = Chăn Lông Cừu Tuyết YUKI Siêu Ấm Nặng 4kg Chính ...
 url = https://thitruongsi.com/chan-long-cuu-tuyet-yuki-sieu-am-nang-4kg-chinh-hang-men-yuki-day-min-kich-thuoc-2mx2m3-hang-xuat-nhat-gia-ib-a-2129967.html
 
 [www.youtube.com]
-match = -55.6%%
-title = LỠ YÊU NGƯỜI THỪA KẾ - TẬP 50 | Ngôn Tình Ấn Độ: Nàng ...
-url = https://www.youtube.com/watch?v=Y9mBdxK-DPg
+match = -66.7%%
+title = Ca nhạc kịch “Con Đò Lỡ Hẹn” | Minishow Birthday Jack Long ...
+url = https://www.youtube.com/watch?v=1hhWI_H4SKs
 
 [www.diepxuan.com]
 match = 22.2%%
