--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-08-03 06:46:56
+lastsearch = 2024-08-03 10:56:57
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -172,9 +172,9 @@ title = Tìm thấy người đàn ông đi lạc trong rừng suốt 4 ngày
 url = https://tuoitre.vn/tim-thay-nguoi-dan-ong-di-lac-trong-rung-suot-4-ngay-20240608115918473.htm
 
 [baoquangnam.vn]
-match = -125.0%%
-title = Nhiều cảm xúc ở giải bóng đá nhi đồng xứ Quảng
-url = https://baoquangnam.vn/nhieu-cam-xuc-o-giai-bong-da-nhi-dong-xu-quang-3136051.html
+match = -75.0%%
+title = Ấn tượng sân chơi câu lạc bộ Karate…
+url = https://baoquangnam.vn/an-tuong-san-choi-cau-lac-bo-karate-3138951.html
 
 [www.co-opmart.com.vn]
 match = -137.5%%
