--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-08-03 08:08:32
+lastsearch = 2024-08-03 10:47:18
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -547,8 +547,8 @@ title =
 url = https://www.federalregister.gov/agencies/health-resources-and-services-administration
 
 [www.gsu.edu]
-match = -115.4%%
-title = Blue Line Georgia State University
+match = -53.8%%
+title = Georgia State University
 url = https://www.gsu.edu/
 
 [www.mariettaga.gov]
