--- a/images/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm.h
 lastopen = 2024-07-01 00:11:36
 
 [search]
-lastsearch = 2024-08-03 09:57:33
+lastsearch = 2024-08-03 10:46:16
 
 [www.everonvn.vn]
 match = 31.1%%
@@ -12,8 +12,8 @@ title = Đệm lò xo King Koil Cloud Firm | Giảm giá 20%%
 url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-Cloud-Firm.html
 
 [everonkorea.com]
-match = 14.9%%
-title = Đệm lò xo Kingkoil Cloud Pillow Top cao 27cm - Everon Korea
+match = 31.8%%
+title = Đệm lò xo Kingkoil Cloud Pillow Top cao 27cm
 url = https://everonkorea.com/dem-lo-xo-kingkoil-cloud-pillow-top/
 
 [demxanh.com]
@@ -37,9 +37,9 @@ title = Điệp Xuân Nệm lò xo Everon Kingkoil Cloud Firm 200x220x27
 url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-200x220x27.html
 
 [www.everonqb.com]
-match = 21.3%%
-title = Everon Quảng Bình Nệm lò xo Everon Bonnell 160x200x23
-url = https://www.everonqb.com/nem-lo-xo-everon-bonnell-160x200x23.html
+match = 57.4%%
+title = Nệm lò xo Everon Kingkoil Cloud Firm 180x200x27
+url = https://www.everonqb.com/nem-lo-xo-everon-kingkoil-cloud-firm-180x200x27.html
 
 [everonvn.com.vn]
 match = 19.1%%
