--- a/images/vo-goi-ke-mau/config.ini
+++ b/images/vo-goi-ke-mau/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-mau.html
 lastopen = 2024-06-10 01:36:08
 
 [search]
-lastsearch = 2024-08-03 06:35:49
+lastsearch = 2024-08-03 10:56:36
 
 [ninhouse.vn]
 match = -161.5%%
@@ -47,9 +47,9 @@ title = UltraSheer - Siêu mỏng, vớ gối, màu da, kín ngón
 url = https://shopykhoa.com/ultrasheer-sieu-mong-vo-goi-mau-da-kin-ngon-sp101.htm
 
 [tiki.vn]
-match = -253.8%%
-title = Mua (Rẻ vô địch) Vỏ gối nằm Cotton poly Mẫu Kẻ Râu Ghi ...
-url = https://tiki.vn/re-vo-dich-vo-goi-nam-cotton-poly-mau-ke-rau-ghi-duoc-lua-mau-p124455489.html
+match = -169.2%%
+title = Mua VỎ GỐI XỊN HÀNG CAO CẤP (màu kẻ ngẫu nhiên)
+url = https://tiki.vn/vo-goi-xin-hang-cao-cap-mau-ke-ngau-nhien-p134296044.html?spid=134296046
 
 [gonbedding.vn]
 match = -15.4%%
